--- a/index.html
+++ b/index.html
@@ -437,11 +437,7 @@ Molimood on Github
 <div id="tabshori">
 <ul>
 <li><a href="http://molimood.github.com"><span>Home</span></a></li>
-<li><span>Task</span></li>
-<ul>
-	<li><a href="http://molimood.github.com">tugas 1</a></li>
-	<li><a href="http://molimood.github.com">tugas </a></li>
-</ul>
+<li><a href="http://molimood.github.com/biodata.html"><span>Task</span></a></li>
 <li><a href="http://molimood.blogspot.com"><span>uncategorized</span></a></li>
 <li><a href="http://molimood.github.com/deskripsidiri.html"><span>molimood</span></a></li>
 <li><a href="http://molimood.blogspot.com"><span>About me</span></a></li>
