--- a/index.html
+++ b/index.html
@@ -437,9 +437,9 @@ Molimood on Github
 <div id="tabshori">
 <ul>
 <li><a href="http://molimood.github.com"><span>Home</span></a></li>
-<li><a href="http://molimood.github.com/biodata.html"><span>Task</span></a></li>
+<li><a href="http://molimood.github.com/biodata.html"><span>Task1</span></a></li>
+<li><a href="http://molimood.github.com/deskripsidiri.html"><span>Task2</span></a></li>
 <li><a href="http://molimood.blogspot.com"><span>uncategorized</span></a></li>
-<li><a href="http://molimood.github.com/deskripsidiri.html"><span>molimood</span></a></li>
 <li><a href="http://molimood.blogspot.com"><span>About me</span></a></li>
 </ul>
 </div >
@@ -474,6 +474,7 @@ Molimood on Github
 <div class='post-body entry-content' id='post-body-6869298133555310541' itemprop='description articleBody'>
   <p>Im at Universitas Negeri Malang <span id="result_box" lang="en" xml:lang="en"> perform routine learning about engineering faculty lecture building (H5) and electrical engineering (G4)</span></p>
   <p>Here I will do a post of my web tasks</p>
+  <p>see my assignment at the buttons on the menu, ranging from first to the finish</p>
   </div>
 </div>
 </div>
