--- a/deskripsidiri.html
+++ b/deskripsidiri.html
@@ -12,8 +12,7 @@ body,td,th {
 -->
 </style>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" /></head>	
-<body>
-<div style="background:-moz-linear-gradient(top, #33333, #666666);background:-webkit-linear-gradient(top, #33333, #666666);border:1px solid #000;color:#FFF;">
+<body bgcolor="#666666">
 <h1 style="font-family:Footlight MT Light;color:#FF3399"><font style="margin-right:20px;">&nbsp;</font>DESKRIPSI DIRI</h1>
 <p style="font-family:Curlz MT"><marquee direction="right" behavior="alternate"><span style = "color:#66CCFF">M a u l i d i a  N u r r o h m a n i / 1 1 0 5 3 3 4 3 0 5 8 8 (D 2011) </span></marquee></p>
 <!----<div align="center"><img src="IMG-20130119-00117.jpg"; width="250"; height="200"/></div>---->
